--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Challenge</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
     <script type="text/javascript" src="bright.js"></script>
 </head>
 <body>
@@ -18,4 +19,5 @@
     <lottie-player src="https://assets6.lottiefiles.com/datafiles/8l7ETEaYxbLz8hU/data.json" mode="bounce" background="transparent"  speed="1"  style="width: 300px; height: 300px;" hover   ></lottie-player>
     <lottie-player src="https://assets8.lottiefiles.com/temp/lf20_dgJrlZ.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
 </body>
+<script src="index.js"></script>
 </html>
