--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
     <!-- <div>
         <img src="assets/364.jpg" alt="cat">
     </div> -->
-    <canvas id="canvas" width="720" height="200">
 
-    </canvas>
-
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <lottie-player src="https://assets6.lottiefiles.com/datafiles/8l7ETEaYxbLz8hU/data.json" mode="bounce" background="transparent"  speed="1"  style="width: 300px; height: 300px;" hover   ></lottie-player>
-    <lottie-player src="https://assets8.lottiefiles.com/temp/lf20_dgJrlZ.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
+    <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <lottie-player src="https://assets6.lottiefiles.com/datafiles/8l7ETEaYxbLz8hU/data.json" mode="bounce" background="transparent"  speed="1"  style="width: 300px; height: 300px;" hover></lottie-player>
+    <lottie-player src="https://assets8.lottiefiles.com/temp/lf20_dgJrlZ.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player> -->
 </body>
 <script src="index.js"></script>
 </html>
