--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Challenge</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
-    <script type="text/javascript" src="bright.js"></script>
+    <!-- <script type="text/javascript" src="bright.js"></script> -->
 </head>
 <body>
     <!-- <div>
