--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Challenge</title>
-    <script type="text/javascript" src="bright.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="index.js"></script>
     
 
 </head>
@@ -21,12 +20,14 @@
 	<!-- This div  wrap all other elements with blend-mode multiply apply -->
 	<div class="blend-multiply full-size">	
 		<!-- This div handle the background element (could be an image, a video or in that case a gif) -->
-		<!-- <div class="animated-bg full-size">
-        </div> -->
-        <video autoplay muted loop id="myVideo">
-            <source src="assets/test.mp4" type="video/mp4">
-            Your browser does not support HTML5 video.
-        </video>
+		<div class="animated-bg full-size">
+            <video autoplay muted loop id="myVideo" class="video">
+                <source src="assets/1.mp4" type="video/mp4">
+                Your browser does not support HTML5 video.
+            </video>
+
+        </div>
+
         <!-- This div wrap the masked element with blend-mode screen apply and background-color set as #ffffff = white background -->
 		<div class="blend-screen element-mask full-size">
 			<!-- This span display the masked element-->
@@ -38,7 +39,8 @@
 
 <div class="notice">
 	<h1>Move your mouse and discover the monster!</h1>
-	<p>This is an attempt to recreate the effect of the homepage of <a href="http://nurturedigital.com/">nurturedigital</a></p>
+    <p>This is an attempt to recreate the effect of the homepage of <a href="http://nurturedigital.com/">nurturedigital</a></p>
+    <button  class="playbutton" id="myBtn" onclick="myFunction()">Pause</button>
 </div>
 </body>
 </html>
